--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-/* CSS Document */
+
 * {
     padding: 0;
     margin: 0;
 }
 
-body{
+body {
     height: 100vh;
     width: 100vw;
 }
@@ -14,9 +14,10 @@ ul {
     margin: 0;
     padding: 0;
 }
+
 li {
     display: inline-block;
-    margin-right: 10px; /* Espacio entre elementos */
+    margin-right: 10px;
     border: 1px grey solid;
     border-radius: 3px;
     padding: 1px;
@@ -27,12 +28,12 @@ a {
     color: black;
 }
 
-.all{
+.all {
     display: grid;
     grid-template-rows: auto auto;
 }
 
-.top {
+.list__header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,61 +41,61 @@ a {
     padding-bottom: 3%;
 }
 
-.titletop {
+.header__headertitle {
     text-align: center;
 }
 
-.titletop>h1{
+.header__headertitle>h1 {
     margin-bottom: 10px;
 }
 
-.bottom{
+.list__bottom {
     display: grid;
     grid-template-columns: auto auto;
     margin-left: 10%;
 }
 
-.left{
+.list__left {
     border-bottom: 1px grey solid;
     padding-right: 15px;
 }
 
-.right{
+.list__right {
     border-bottom: 1px grey solid;
     border-left: 1px grey solid;
     width: 70%;
     padding-left: 15px;
 }
 
-.titlebot{
-    font-size:larger;
+.titlebot {
+    font-size: larger;
     font-weight: 900;
 }
 
-.titlebot1{
-    font-size:larger;
+.titlebot1 {
+    font-size: larger;
     font-weight: 900;
 }
 
-.titlebot2{
-    font-size:larger;
+.titlebot2 {
+    font-size: larger;
     font-weight: 900;
     margin-top: 20px;
 }
 
-h3{
+h3 {
     margin-bottom: 15px;
 }
 
-p{
+p {
     padding-bottom: 10px;
 }
 
-.comments{
+.comments {
     font-style: italic;
     font-size: small;
     font-weight: bold;
-    background-color:rgb(169, 158, 140);
+    background-color: rgb(169, 158, 140);
     border-radius: 8px;
     padding: 8px;
 }
