--- a/index.css
+++ b/index.css
@@ -1,106 +1,48 @@
-
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
+.wrapper {
+    border: 1px solid blue ;
+    width:  75vw;
+    margin: 32px auto 0;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    display: inline-block;
-    margin-right: 10px;
-    border: 1px grey solid;
-    border-radius: 3px;
-    padding: 1px;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-.all {
-    display: grid;
-    grid-template-rows: auto auto;
-}
-
-.list__header {
-    display: flex;
-    justify-content: center;
+.header-top{
     align-items: center;
-    padding-top: 2%;
-    padding-bottom: 3%;
+    display: flex;
+    flex-direction: column;
 }
 
-.header__headertitle {
+.header-top__heading{
+    font-size: 2rem;
+    width: 100%;
     text-align: center;
 }
 
-.header__headertitle>h1 {
-    margin-bottom: 10px;
+
+.header-top__nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 8px;
 }
 
-.list__bottom {
-    display: grid;
-    grid-template-columns: auto auto;
-    margin-left: 10%;
+.header-top__nav ul li {
+    border: 1px solid grey ;
+    border-radius: 4px;
+    padding: 4px;
+    text-decoration: none;  
+    
 }
 
-.list__left {
-    border-bottom: 1px grey solid;
-    padding-right: 15px;
+
+.nav-list {
+    list-style-type: none;
+
 }
 
-.list__right {
-    border-bottom: 1px grey solid;
-    border-left: 1px grey solid;
-    width: 70%;
-    padding-left: 15px;
-}
-
-.titlebot {
-    font-size: larger;
-    font-weight: 900;
-}
-
-.titlebot1 {
-    font-size: larger;
-    font-weight: 900;
-}
-
-.titlebot2 {
-    font-size: larger;
-    font-weight: 900;
-    margin-top: 20px;
-}
-
-h3 {
-    margin-bottom: 15px;
-}
-
-p {
-    padding-bottom: 10px;
-}
-
-.comments {
-    font-style: italic;
-    font-size: small;
-    font-weight: bold;
-    background-color: rgb(169, 158, 140);
-    border-radius: 8px;
-    padding: 8px;
-}
-
-footer {
-    text-align: center;
-    margin-top: 5px;
-}
